--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "gridWars game",
     "dependencies": {
         "express": "^4.18.2",
+        "immutable": "^4.3.0",
         "node-fetch": "^3.3.1",
         "socket.io": "^4.6.2"
     }
