--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-    "name": "gridWars",
+    "name": "grid-wars",
     "version": "0.0.1",
     "description": "gridWars game",
+    "scripts": {
+        "start": "node src/index.js",
+        "dev": "node --watch-path=./src ./src/index.js"
+    },
     "dependencies": {
         "express": "^4.18.2",
         "immutable": "^4.3.0",
